# cpp-cmake-template

./: .gitignore  .travis.yml  CMakeLists.txt
cmake/: DownloadProject.cmake  FilterOnOptions.cmake  PreventInSourceBuilds.cmake
libs/: CMakeLists.txt
libs/googletest/: CMakeLists.txt
src/: CMakeLists.txt
src/example_lib/: example.cpp
src/include/example_lib/: example.hpp
src/include/rkdp/: rkdp.hpp
src/rkdp/: rkdp.cpp
src/test/: CMakeLists.txt  test.cpp
